fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/Product_Tracking__c.object-meta.xml
<CustomObject>
    <description>To support product tracking with Accounts and Marketing Campaigns</description>
    <label>Product Tracking</label>
    <nameField>
        <label>Product Tracking ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tracking</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>