fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Business_Unit_GPL__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_GPL__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Unit_GPL</valueSetName>
    </valueSet>
</CustomField>