fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Clinical_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Stakeholder__c</fullName>
    <description>Who is your Clinical Stakeholder and will make judgements about impact on job performance?</description>
    <inlineHelpText>Who is your Clinical Stakeholder and will make judgements about impact on job performance?</inlineHelpText>
    <label>Clinical Stakeholder?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>