fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>45</length>
    <type>Text</type>
</CustomField>