fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <label>Contact First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>