fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <defaultValue>&quot;If this contact has already been setup in Salesforce.com, lookup contact in the *Contact Name* field. If contact is not setup yet, enter in contact first name, last name and title before creating Opportunity.&quot;</defaultValue>
    <label>Contact Info!</label>
    <length>210</length>
    <type>Text</type>
</CustomField>