fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <label>Contact Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>