fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Economic_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Economic_Stakeholder__c</fullName>
    <description>Who is your Economic Stakeholder and will give final approval to purchase?</description>
    <inlineHelpText>Who is your Economic Stakeholder and will give final approval to purchase?</inlineHelpText>
    <label>Economic Stakeholder?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>