fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/How_many_months_until_order__c.field-meta.xml
<CustomField>
    <fullName>How_many_months_until_order__c</fullName>
    <inlineHelpText>0-12</inlineHelpText>
    <label>How many months until order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>