fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/How_much_do_plan_to_order__c.field-meta.xml
<CustomField>
    <fullName>How_much_do_plan_to_order__c</fullName>
    <label>How much do plan to order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>