fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Is_the_product_through_VAC__c.field-meta.xml
<CustomField>
    <fullName>Is_the_product_through_VAC__c</fullName>
    <label>Is the product through VAC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>