fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Product Tracking</relationshipLabel>
    <relationshipName>Product_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>