fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>