fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Tracking</relationshipLabel>
    <relationshipName>Product_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>