fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Opportunity_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Create_Date__c</fullName>
    <description>Created Date of Related Opportunity</description>
    <formula>Opportunity__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Create Date</label>
    <type>DateTime</type>
</CustomField>