fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Opportunity_Name_Blank__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_Blank__c</fullName>
    <formula>IF(ISBLANK( Opportunity__c ), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name Blank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>