fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Or__c.field-meta.xml
<CustomField>
    <fullName>Or__c</fullName>
    <defaultValue>&quot;If Contact already exists, search for them below&quot;</defaultValue>
    <label>OR...</label>
    <length>100</length>
    <type>Text</type>
</CustomField>