fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Surgical MiniLap</fullName>
                <color>#FF9900</color>
                <default>true</default>
                <label>Surgical MiniLap</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>