fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family Old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Acute</fullName>
            </value>
            <value>
                <fullName>Airway</fullName>
            </value>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>Arterial</fullName>
            </value>
            <value>
                <fullName>Auto Ligation</fullName>
            </value>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Central Venous Access</fullName>
            </value>
            <value>
                <fullName>Chest Drainage</fullName>
            </value>
            <value>
                <fullName>Dialysis Access</fullName>
            </value>
            <value>
                <fullName>EZ-IO</fullName>
            </value>
            <value>
                <fullName>Fascial closure</fullName>
            </value>
            <value>
                <fullName>General Specialties</fullName>
            </value>
            <value>
                <fullName>IAB</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Interventional Procedures</fullName>
            </value>
            <value>
                <fullName>IR JACC</fullName>
            </value>
            <value>
                <fullName>Ligation</fullName>
            </value>
            <value>
                <fullName>LMA</fullName>
            </value>
            <value>
                <fullName>Minilap</fullName>
            </value>
            <value>
                <fullName>OnControl</fullName>
            </value>
            <value>
                <fullName>Other (Third Party)</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Percuvance</fullName>
            </value>
            <value>
                <fullName>PICCs/Midline</fullName>
            </value>
            <value>
                <fullName>Port(s)</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Right Heart</fullName>
            </value>
            <value>
                <fullName>Sheaths</fullName>
            </value>
            <value>
                <fullName>Suture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>