fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Product_of_Interest_Sort__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest_Sort__c</fullName>
    <label>Product of Interest (Sort)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>