fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Reason_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Reason_Unqualified__c</fullName>
    <label>Reason Unqualified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Using Competitive Product</fullName>
            </value>
            <value>
                <fullName>Price To High</fullName>
            </value>
            <value>
                <fullName>Current Customer – Already Using Product</fullName>
            </value>
            <value>
                <fullName>Need Evidence Based Medicine</fullName>
            </value>
            <value>
                <fullName>Not Interested Presently</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>