fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <label>SAP Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>