fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Opportunity Created</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>