fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Steps_required_to_order__c.field-meta.xml
<CustomField>
    <fullName>Steps_required_to_order__c</fullName>
    <label>Steps required to order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VAC needed</fullName>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>