fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Strategic_Initiative_Name__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Initiative_Name__c</fullName>
    <label>Strategic Initiative Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>