fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Unit_of_Measure_UOM__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_UOM__c</fullName>
    <label>Unit of Measure (UOM)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CS - Case</fullName>
            </value>
            <value>
                <fullName>EA - Each</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>