fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Utilizing_free_product__c.field-meta.xml
<CustomField>
    <fullName>Utilizing_free_product__c</fullName>
    <label>Utilizing free product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>