fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/Will_you_purchase_in_the_future__c.field-meta.xml
<CustomField>
    <fullName>Will_you_purchase_in_the_future__c</fullName>
    <label>Will you purchase in the future</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>