fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/fields/X3_Questions_to_Answer__c.field-meta.xml
<CustomField>
    <fullName>X3_Questions_to_Answer__c</fullName>
    <defaultValue>&quot;Who is your Economic Stakeholder and will give final approval to purchase?&quot;+&quot;  &quot;+BR()
+
&quot;Who is your Clinical Stakeholder and will make judgements about impact on job performance?&quot;+&quot; &quot;+BR()
+
&quot;Who is your Coach and will act as a guide for this sale?&quot;</defaultValue>
    <label>3 Questions to Answer:</label>
    <type>TextArea</type>
</CustomField>