fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/recordTypes/Anesthesia_Product_Tracking.recordType-meta.xml
<RecordType>
    <fullName>Anesthesia_Product_Tracking</fullName>
    <active>true</active>
    <label>Anesthesia Product Tracking</label>
</RecordType>