fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/recordTypes/Interventional_Product_Tracking.recordType-meta.xml
<RecordType>
    <fullName>Interventional_Product_Tracking</fullName>
    <active>true</active>
    <label>Interventional Product Tracking</label>
</RecordType>