fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>true</active>
    <label>Master</label>
</RecordType>