fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/recordTypes/Vascular_Product_Tracking.recordType-meta.xml
<RecordType>
    <fullName>Vascular_Product_Tracking</fullName>
    <active>true</active>
    <label>Vascular Product Tracking</label>
</RecordType>