fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/validationRules/If_the_Product_is_not_trough_VAC_require.validationRule-meta.xml
<ValidationRule>
    <fullName>If_the_Product_is_not_trough_VAC_require</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Is_the_product_through_VAC__c , &quot;No&quot;),
 ISPICKVAL(Steps_required_to_order__c,&quot;&quot; )
)</errorConditionFormula>
    <errorDisplayField>Steps_required_to_order__c</errorDisplayField>
    <errorMessage>Please add the Steps required to order</errorMessage>
</ValidationRule>