fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/validationRules/Is_reason_is_price_previous_price_requir.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_reason_is_price_previous_price_requir</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Reason_for_not_buying__c , &quot;Price&quot;) ,  
  ISNULL(Previous_Price__c)
)</errorConditionFormula>
    <errorDisplayField>Previous_Price__c</errorDisplayField>
    <errorMessage>You selected Price as a Reason for not buying, please enter the previous price</errorMessage>
</ValidationRule>