fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/validationRules/Product_Tracking_Reason_Unqualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Tracking_Reason_Unqualified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Status__c) = &quot;Not Qualified&quot;,
(ISBLANK(TEXT(Reason_Unqualified__c))))</errorConditionFormula>
    <errorDisplayField>Reason_Unqualified__c</errorDisplayField>
    <errorMessage>If Unqualified, please state reason why.</errorMessage>
</ValidationRule>