fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/validationRules/Reason_for_not_buying_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_not_buying_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Utilizing_product_del__c, &quot;No&quot;), 
 ISPICKVAL(Reason_for_not_buying__c,&quot;&quot; )
)</errorConditionFormula>
    <errorDisplayField>Reason_for_not_buying__c</errorDisplayField>
    <errorMessage>If they are not utilizing the product, please enter Reason for not buying</errorMessage>
</ValidationRule>