fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/validationRules/Will_Purchase_in_the_futureRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>Will_Purchase_in_the_futureRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Utilizing_product_del__c, &quot;No&quot;),
  ISPICKVAL( Will_you_purchase_in_the_future__c ,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Will_you_purchase_in_the_future__c</errorDisplayField>
    <errorMessage>If they are not utilizing the product, please enter &quot;Will you purchase in the future?&quot;</errorMessage>
</ValidationRule>