fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/listViews/All_Anesthesia_Product_Tracking.listView-meta.xml
<ListView>
    <fullName>All_Anesthesia_Product_Tracking</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>Owner_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Tracking__c.Anesthesia_Product_Tracking</value>
    </filters>
    <label>All Anesthesia Product Tracking</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Anesthesia_President</roleAndSubordinates>
    </sharedTo>
</ListView>