fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/listViews/All_Vizient_Sole_Source.listView-meta.xml
<ListView>
    <fullName>All_Vizient_Sole_Source</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Reason_Unqualified__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>Owner_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Strategic_Initiative_Name__c</field>
        <operation>equals</operation>
        <value>Vizient Sole Source</value>
    </filters>
    <label>All Vizient Sole Source</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Vascular_President</roleAndSubordinates>
    </sharedTo>
</ListView>