fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/listViews/Medline_Defense.listView-meta.xml
<ListView>
    <fullName>Medline_Defense</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Tracking__c.Vascular_Product_Tracking</value>
    </filters>
    <filters>
        <field>Strategic_Initiative_Name__c</field>
        <operation>contains</operation>
        <value>Medline Defense</value>
    </filters>
    <label>Medline Defense</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Vascular_President</roleAndSubordinates>
    </sharedTo>
</ListView>