fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/listViews/My_Vizient_Sole_Source.listView-meta.xml
<ListView>
    <fullName>My_Vizient_Sole_Source</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Reason_Unqualified__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Strategic_Initiative_Name__c</field>
        <operation>equals</operation>
        <value>Vizient Sole Source</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Tracking__c.Vascular_Product_Tracking</value>
    </filters>
    <label>My Vizient Sole Source</label>
    <language>en_US</language>
</ListView>