fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/listViews/Non_Compliant_HPG.listView-meta.xml
<ListView>
    <fullName>Non_Compliant_HPG</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Age_in_Days__c</columns>
    <columns>On_Multiple_Lists__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Strategic_Initiative_Name__c</field>
        <operation>equals</operation>
        <value>Non Compliant HPG</value>
    </filters>
    <label>Non Compliant HPG</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Vascular_President</roleAndSubordinates>
    </sharedTo>
</ListView>