fullSandbox11072023/force-app/main/default/objects/Product_Tracking__c/listViews/Vizient_High_Score.listView-meta.xml
<ListView>
    <fullName>Vizient_High_Score</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Age_in_Days__c</columns>
    <columns>On_Multiple_Lists__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Strategic_Initiative_Name__c</field>
        <operation>equals</operation>
        <value>Vizient High Score</value>
    </filters>
    <label>Vizient High Score</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Vascular_President</roleAndSubordinates>
    </sharedTo>
</ListView>